Moved bulk import settings to modal window in preparation for allowing multiple settings. Minor CSS fixes for table layout and media fields. Removed collapse/close buttons from media subheading in bulk settings.

--- a/css/bulk_import.css
+++ b/css/bulk_import.css
@@ -1,3 +1,29 @@
-#bulk_import_settings {
-  
+#bulk_import_directories
+{
+  max-width: 1200px;
+}
+
+#bulk_import_directories tr {
+  padding-bottom: 6px;
+  height: 28px;
+}
+
+#bulk_import_directories td, #bulk_import_directories th {
+  padding-right: 8px;
+  max-width: 500px;
+}
+
+#bulk_import_directories th:first-child, #bulk_import_directories td:first-child {
+  text-align: left;
+  width: 200px;
+}
+
+#bulk_import_directories th:nth-child(2), #bulk_import_directories td:nth-child(2) {
+  text-align: left;
+  width: 500px;
+}
+
+#bulk_import_settings .addedit_form_legend {
+  margin-left: 0px;
+  padding-left: 0px;
 }
